--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-image-slider-box": "megamaxs1234/react-native-image-slider-box",
+    "react-native-location": "^2.5.0",
     "react-native-maps": "1.3.2",
     "react-native-paper": "^5.1.3",
     "react-native-reanimated": "~2.12.0",
@@ -35,7 +36,8 @@
     "react-native-status-bar-height": "^2.6.0",
     "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4",
-    "yarn": "^1.22.19"
+    "yarn": "^1.22.19",
+    "expo-location": "~15.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3"
